--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+spring.zipkin.baseUrl=http://localhost:9411/
+spring.zipkin.enabled=true
+
 logging.level.com.netflix.eureka=INFO
 logging.level.com.netflix.discovery=INFO
